# Monkeys-with-Novelwriters

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
backend/: __init__.py  __main__.py  ai_service.py  main.py  models.py  session_manager.py
frontend/: app.js  index.html  style.css
src/monkeynw/: __main__.py  ai_service.py  main.py  models.py  session_manager.py
src/monkeynw/frontend/: index.html
src/monkeynw/frontend/css/: chat.css  components.css  main-content.css  mainline.css  sidebar.css  skilltree.css
src/monkeynw/frontend/js/: characters.js  chat.js  init.js  locations.js  mainline.js  session.js  skilltree.js  story.js  utils.js  workspace.js
src/novsmart/: __init__.py  __main__.py  ai_service.py  main.py  models.py  session_manager.py
src/novsmart/frontend/: app.js  index.html  style.css
src/novsmart/frontend/css/: components.css  main-content.css  mainline.css  sidebar.css  state-panel.css  variables.css
src/novsmart/frontend/js/: characters.js  config.js  init.js  locations.js  mainline.js  session.js  story.js  utils.js  workspace.js
