[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monkeys-with-novelwriters"
version = "0.1.0"
description = "Monkeys-with-Novelwriters - AI 小说写作框架"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "openai>=1.12.0",
    "pydantic>=2.6.0",
]

[project.scripts]
novsmart = "novsmart.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
novsmart = ["frontend/**/*"]
